maml/test/corpus/regions.txt
================================================================================
Text outside regions is ignored
================================================================================

A title, $bold(not a mark) here, $$begin escaped
$begin$end
after

--------------------------------------------------------------------------------

(document
  (skip_text)
  (region)
  (skip_text))

================================================================================
Several regions
================================================================================

$begin a $end b $begin c $end

--------------------------------------------------------------------------------

(document
  (skip_text)
  (region
    (text))
  (skip_text)
  (region
    (text))
  (skip_text))

================================================================================
Missing end runs to the end of the input
================================================================================

$begin text $em(x)

--------------------------------------------------------------------------------

(document
  (skip_text)
  (region
    (text)
    (mark
      (mark_name)
      (operand
        (text)))
    (text)))

================================================================================
$begin inside a region starts a new region (MAML: error)
================================================================================

$begin $begin $end

--------------------------------------------------------------------------------

(document
  (skip_text)
  (region
    (text))
  (region
    (text))
  (skip_text))
